[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Preload/debug_interface.tscn" type="PackedScene" id=2]
[ext_resource path="res://Nodes/UI/Options.tscn" type="PackedScene" id=4]
[ext_resource path="res://Backgrounds/mainmenu_background2.png" type="Texture" id=5]
[ext_resource path="res://Shader/HQ4X.gdshader" type="Shader" id=6]
[ext_resource path="res://Theme stuff/main_theme.tres" type="Theme" id=7]
[ext_resource path="res://Sprites/animated_particles/smal_animated_star.tres" type="Texture" id=8]
[ext_resource path="res://Theme stuff/icon.png" type="Texture" id=9]
[ext_resource path="res://Nodes/UI/MainMenuPanel.tscn" type="PackedScene" id=10]

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 6 )
shader_param/THRESHOLD = 0.1
shader_param/AA_SCALE = 10.0

[sub_resource type="Curve" id=5]
min_value = -360.0
max_value = 360.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.151515, -108.818 ), 0.0, 0.0, 0, 0, Vector2( 0.367965, 120.273 ), 0.0, 0.0, 0, 0, Vector2( 0.627706, -49.9091 ), 1628.31, 1628.31, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Curve" id=6]
_data = [ Vector2( 0, 0.0136364 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.9875 ), 3.24546, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=7]
offsets = PoolRealArray( 0, 0.100962, 0.375, 0.538462, 0.658654, 1 )
colors = PoolColorArray( 1, 1, 1, 0, 0.519531, 0.894428, 1, 1, 0.519531, 1, 0.943695, 1, 0.289063, 0.383484, 1, 1, 0.35713, 0.347357, 0.936035, 1, 1, 1, 1, 0 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Background:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1500, -850 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "main"
length = 180.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Background:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 15.7, 41, 80.9, 133.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -1500, -850 ), Vector2( -2100, -1200 ), Vector2( -800, -90 ), Vector2( -36, -700 ), Vector2( -900, -1200 ) ]
}

[node name="MainMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="NinePatchRect" parent="."]
material = SubResource( 4 )
margin_left = -1500.0
margin_top = -850.0
margin_right = 1500.0
margin_bottom = 850.0
texture = ExtResource( 5 )
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
modulate = Color( 0.8, 1, 1.9, 1 )
position = Vector2( 300, 169 )
amount = 600
lifetime = 5.0
lifetime_randomness = 1.0
texture = ExtResource( 8 )
emission_shape = 2
emission_rect_extents = Vector2( 400, 300 )
direction = Vector2( 1, 7 )
spread = 10.0
gravity = Vector2( -8, -7 )
initial_velocity = 10.0
initial_velocity_random = 0.35
angular_velocity = 45.0
angular_velocity_random = 1.0
angular_velocity_curve = SubResource( 5 )
linear_accel = 7.0
linear_accel_random = 0.4
radial_accel = 8.0
radial_accel_random = 1.0
tangential_accel = 1.0
tangential_accel_random = 0.1
damping = 5.0
damping_random = 1.0
angle = 40.0
angle_random = 1.0
scale_amount = 0.8
scale_amount_random = 0.4
scale_amount_curve = SubResource( 6 )
color_ramp = SubResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "main"
anims/RESET = SubResource( 2 )
anims/main = SubResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TempIcon" type="TextureRect" parent="CanvasLayer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 199.0
margin_bottom = 199.0
texture = ExtResource( 9 )

[node name="Buttons" type="VBoxContainer" parent="CanvasLayer"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -110.0
margin_top = 10.0
margin_right = -120.0
margin_bottom = -10.0
alignment = 2

[node name="Play" type="Button" parent="CanvasLayer/Buttons"]
margin_top = 282.0
margin_right = 310.0
margin_bottom = 296.0
focus_neighbour_top = NodePath("../Quit")
focus_neighbour_bottom = NodePath("../Options")
theme = ExtResource( 7 )
text = "Play"
align = 0

[node name="Options" type="Button" parent="CanvasLayer/Buttons"]
margin_top = 304.0
margin_right = 310.0
margin_bottom = 318.0
focus_neighbour_top = NodePath("../Play")
focus_neighbour_bottom = NodePath("../Quit")
theme = ExtResource( 7 )
text = "Options"
align = 0

[node name="Quit" type="Button" parent="CanvasLayer/Buttons"]
margin_top = 326.0
margin_right = 310.0
margin_bottom = 340.0
focus_neighbour_top = NodePath("../Options")
focus_neighbour_bottom = NodePath("../Play")
theme = ExtResource( 7 )
text = "Quit"
align = 0

[node name="Saves" type="MarginContainer" parent="CanvasLayer"]
modulate = Color( 1, 1, 1, 0 )
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 5.0
margin_top = 190.0
margin_right = -5.0
margin_bottom = 376.0

[node name="H" type="HBoxContainer" parent="CanvasLayer/Saves"]
margin_right = 630.0
margin_bottom = 186.0
custom_constants/separation = 4
alignment = 1

[node name="Slot0" parent="CanvasLayer/Saves/H" instance=ExtResource( 10 )]
margin_left = 57.0
margin_right = 183.0
margin_bottom = 186.0

[node name="Slot1" parent="CanvasLayer/Saves/H" instance=ExtResource( 10 )]
margin_left = 187.0
margin_right = 313.0
margin_bottom = 186.0
slot_number = 2

[node name="Slot2" parent="CanvasLayer/Saves/H" instance=ExtResource( 10 )]
margin_left = 317.0
margin_right = 443.0
margin_bottom = 186.0
slot_number = 3

[node name="Slot3" parent="CanvasLayer/Saves/H" instance=ExtResource( 10 )]
margin_left = 447.0
margin_right = 573.0
margin_bottom = 186.0
slot_number = 4

[node name="Tween" type="Tween" parent="CanvasLayer"]

[node name="debug" parent="CanvasLayer" instance=ExtResource( 2 )]

[node name="Options" parent="CanvasLayer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 10.0
margin_right = 590.0
margin_bottom = 328.0

[connection signal="pressed" from="CanvasLayer/Buttons/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="CanvasLayer/Buttons/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="CanvasLayer/Buttons/Quit" to="." method="_on_Quit_pressed"]
